--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -8,7 +8,7 @@
   </picture>
 
   <picture>
-    <img class="home__candado" src="../../assets/img/Home/candado.svg" />
+    <img class="home__candado" routerLink="/inicio" src="../../assets/img/Home/candado.svg" />
   </picture>
 
   <picture class="home__redes">
@@ -25,20 +25,4 @@
   </div>
 </div>
 
-<!--
 
-<div class="home">
-  <picture class="home__fondo">
-    <img src="../../assets/img/Home/home.png" />
-    <img src="../../assets/img/Home/Ketanolab.svg" />
-    <img src="../../assets/img/Home/candado.svg" />
-    <img src="../../assets/img/Home/facebook.svg" />
-    <img src="../../assets/img/Home/in.svg" />
-    <img src="../../assets/img/Home/twiter.svg" />
-  </picture>
-  <div class="home__centrado">
-    <a routerLink="/inicio">{{ "HOME.SERVICES" | translate }}</a>
-  </div>
-</div>
-
--->
