--- a/src/app/Components/inicio/inicio.component.html
+++ b/src/app/Components/inicio/inicio.component.html
@@ -1,24 +1,25 @@
-<div class="background">
+
+<div >
     <app-navbar></app-navbar>
     <div class="principal">
         <picture class="">
             <img class="img-1" src="../../assets/img/principal/2.png" alt="">
             <p><a href=""class="text-1">SISTEMAS DIGITALES EN LINEA</a></p>
-            <p><a href="" class="text-1-2 fuente"  >E-COMMERCE</a></p>
-            <p><a href=""class="text-1-3 fuente">SERVICIOS <p class="fuente">WEB</p></a></p>
-            <p><a href=""class="text-1-4 fuente">APPs</a></p>
+            <p><a href="/commerce" class="text-1-2 fuente"  >E-COMMERCE</a></p>
+            <p><a href="/services"class="text-1-3 fuente">SERVICIOS <p class="fuente">WEB</p></a></p>
+            <p><a href="/apps"class="text-1-4 fuente">APPs</a></p>
         </picture>
     </div>
 
     <picture>
         <img class="img-2" src="../../assets/img/principal/1.png" alt="">
-        <p><a href=""class="text-2">COACHING DIGITAL NFTs</a></p>
-        <p><a class="text-2-1 fuente" href="">COACHING
+        <p><a href=""class="text-2">COACHING DIGITAL NFT</a></p>
+        <p><a class="text-2-1 fuente" href="/arte">COACHING
             <p class="fuente"> ARTE DIGITAL</p></a></p>
-        <p><a class="text-2-2 fuente" href="">COACHING
+        <p><a class="text-2-2 fuente" href="/turismo">COACHING
             <p class="fuente"> TURISMO</p>
             <p class="fuente"> VIRTUAL</p></a></p>
-        <p><a href=""class="text-2-3 fuente">COACHING
+        <p><a href="/coaching"class="text-2-3 fuente">COACHING
             <p class="fuente"> PROYECTOS</p>
            <p class="fuente"> DIGITALES</p></a></p>
     </picture>
@@ -26,16 +27,16 @@
     <picture>
         <img class="img-3" src="../../assets/img/principal/3.png" alt="">
         <p><a href="#" class="text-3">CONSULTORÍA DE ESTRATEGIA DIGITAL</a></p>
-        <p><a href=""class="text-3-1 fuente">PRODUCCIÓN
+        <p><a href="/produccion"class="text-3-1 fuente">PRODUCCIÓN
            <p class="fuente"> DIGITAL</p></a></p>
-        <p><a href=""class="text-3-2 fuente">MARKETING
+        <p><a href="/marketing"class="text-3-2 fuente">MARKETING
            <p class="fuente"> EXPONENCIAL</p></a></p>
     </picture>
 
     <picture>
         <img class="img-4" src="../../assets/img/principal/4.png" alt="">
         <p><a href=""class="text-4">DESARROLLO DE SOLUCIONES <p class="text-4-1"> BLOCKCHAIN</p></a></p>
-        <p><a class="text-4-2 fuente"href="#">DAPPs</a></p>
+        <p><a class="text-4-2 fuente" href="/dapps">DAPPs</a></p>
     </picture>
 
     <picture>
