--- a/src/app/Components/experiencia/experiencia.component.html
+++ b/src/app/Components/experiencia/experiencia.component.html
@@ -4,34 +4,60 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Experiencia</title>
 </head>
 <body class="color1">
-    <app-navbar></app-navbar>
+    <app-nav></app-nav>
     <div class="container">
-        <div class="container-md p-6">
-            <h3 class="text-center pb-5 pt-6 h1">NUESTRA EXPERIENCIA</h3>
-        </div>
-        <div class="row hola" >
-            <div class="card1">
-              <div class="card-body">
-                <img src="../../../assets/img/pag1.svg" class="img1"  alt="">
-                </div>
-              </div>
-              <div class="card1">
-                <div class="card-body" >
-                    <img src="../../../assets/img/pag2.svg" class="img1" alt="">
-                </div>
-              </div>
-              <div  class="card1" >
-                <div class="card-body" >
-                    <img src="../../../assets/img/pag3.svg" class="img1" alt="">
-                </div>
+      <div class="container-md p-6">
+          <h3 class="text-center pb-5 pt-6 h1">{{"EXPERIENCE.TITLE" | translate}}</h3>
+      </div>
+      <div class="row hola" >
+          <div class="card1">
+            <div class="card-body">
+              <ngu-carousel [inputs]="carouselBanner" [dataSource]="carouselTileItems$ | async">
+                  <button NguCarouselPrev class='leftRs'>&lt;</button>
+                
+                  <ngu-item *nguCarouselDef="let item; index as i; let ani = animate" [@slider]="ani">
+                    <div class="bannerStyle" [style.background]="'url(' + item + ')'">
+                      <h1>{{ i + 1 }}</h1>
+                    </div>
+                  </ngu-item>
+                  <button NguCarouselNext class='rightRs'>&gt;</button>
+                </ngu-carousel>
               </div>
             </div>
-          <div class="container-md col-md-9 p-8">
-            <p class="text-justify pb-8 pt-8">KetanoLab es una Agencia de Servicios Digitales enfocada en aportar un valor diferencial, enlazando plataformas, mejorando la experiencia de consumo adaptándose a la transformación digital y brindando servicios que vayan  en tendencia a las nuevas  tecnologias siguiendo al ritmo de cada proyecto.</p>
-        </div>
-    </div>
+            <div class="card1">
+              <div class="card-body" >
+                  <ngu-carousel [inputs]="carouselBanner" [dataSource]="carouselTileItems1$ | async">
+                      <button NguCarouselPrev class='leftRs'>&lt;</button>
+                    
+                      <ngu-item *nguCarouselDef="let item; index as i; let ani = animate" [@slider]="ani">
+                        <div class="bannerStyle" [style.background]="'url(' + item + ')'">
+                          <h1>{{ i + 1 }}</h1>
+                        </div>
+                      </ngu-item>
+                      <button NguCarouselNext class='rightRs'>&gt;</button>
+                    </ngu-carousel>
+              </div>
+            </div>
+            <div  class="card1" >
+              <div class="card-body" >
+                  <ngu-carousel [inputs]="carouselBanner" [dataSource]="carouselTileItems2$ | async">
+                      <button NguCarouselPrev class='leftRs'>&lt;</button>
+                    
+                      <ngu-item *nguCarouselDef="let item; index as i; let ani = animate" [@slider]="ani">
+                        <div class="bannerStyle" [style.background]="'url(' + item + ')'">
+                          <h1>{{ i + 1 }}</h1>
+                        </div>
+                      </ngu-item>
+                      <button NguCarouselNext class='rightRs'>&gt;</button>
+                    </ngu-carousel>
+              </div>
+            </div>
+          </div>
+        <div class="container-md col-md-9 p-8">
+          <p class="text-justify pb-8 pt-8 text1">{{"EXPERIENCE.PARAGRAPH" | translate}}</p>
+      </div>
+  </div>
 </body>
 </html>
