--- a/src/app/Components/services/services.component.html
+++ b/src/app/Components/services/services.component.html
@@ -4,20 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
 </head>
 <body class="color1">
-    <app-navbar></app-navbar>
+    <app-nav></app-nav>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-auto posicion">
                 <div class="figura">
-                    <p class="pt-6 ml-6">SERVICIOS WEB</p>
+                    <p class="pt-6 ml-6">{{"SERVICES.TITLE" | translate}}</p>
                 </div>
               <img src="../../../assets/img/mark.jpg" class="img1" alt="">
             </div>
             <div class="col col-md-3 ml-1 color">
-                <p class=" pb-6 pt-6 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore ratione atque eveniet temporibus perspiciatis placeat nisi, odit tenetur similique cum quam, veniam expedita dolor ex. Ad quis magni cupiditate a.</p>
+                <p class=" pb-6 pt-6 h6">{{"SERVICES.PARAGRAPH" | translate}}</p>
             </div>
           </div>
     </div>
