--- a/src/app/Components/experiencia/experiencia.component.css
+++ b/src/app/Components/experiencia/experiencia.component.css
@@ -1,12 +1,44 @@
-.container{
+.bannerStyle h1 {
+    min-height: 218px;
+    line-height: 218px;
+    text-align: center;
+    
+  }
+  .leftRs {
+    position: absolute;
+    margin: auto;
+    top: 0;
+    bottom: 0;
+    width: 50px;
+    height: 50px;
+    box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.568);
+    border-radius: 999px;
+    left: 0;
+    z-index: 1;
+    margin-top: 100px;
+    display: none;
+  }
+  
+  .rightRs {
+    position: absolute;
+    margin: auto;
+    top: 0;
+    bottom: 0;
+    width: 50px;
+    height: 50px;
+    box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.568);
+    border-radius: 999px;
+    right: 0;
+    z-index: 1;
+    display: none;
+  }
+  .container{
     margin-top: 9%;
  }
 .img1{
-  width: 350px;
+  width: 325px;
 } 
-/* .row{
-    margin-left: 150px;
-} */
+
 .card1{
     margin-left: 15px;
     width: 25rem;
@@ -18,5 +50,8 @@
 .color1{
     background-color: #00172A;
     color: white;
+}
+.text1{
+  margin-top: -60px;
 }
 
