--- a/src/app/Components/inicio/inicio.component.html
+++ b/src/app/Components/inicio/inicio.component.html
@@ -1,47 +1,47 @@
+<app-nav></app-nav>
 
 <div >
-    <app-navbar></app-navbar>
-    <div class="principal">
-        <picture class="">
+    <div>
+        <picture>
             <img class="img-1" src="../../assets/img/principal/2.png" alt="">
-            <p><a href=""class="text-1">SISTEMAS DIGITALES EN LINEA</a></p>
-            <p><a href="/commerce" class="text-1-2 fuente"  >E-COMMERCE</a></p>
-            <p><a href="/services"class="text-1-3 fuente">SERVICIOS <p class="fuente">WEB</p></a></p>
-            <p><a href="/apps"class="text-1-4 fuente">APPs</a></p>
+            <p><a href=""class="text-1">{{"BEGINNING.TITLE-1" | translate}}</a></p>
+            <p><a href="/commerce" class="text-1-2 fuente"  >{{"BEGINNING.TITLE-2" | translate}}</a></p>
+            <p><a href="/services"class="text-1-3 fuente">{{"BEGINNING.TITLE-3" | translate}} <p class="fuente">{{"BEGINNING.TITLE-3.1" | translate}}</p></a></p>
+            <p><a href="/apps"class="text-1-4 fuente">{{"BEGINNING.TITLE-4" | translate}}</a></p>
         </picture>
     </div>
 
     <picture>
         <img class="img-2" src="../../assets/img/principal/1.png" alt="">
-        <p><a href=""class="text-2">COACHING DIGITAL NFT</a></p>
-        <p><a class="text-2-1 fuente" href="/arte">COACHING
-            <p class="fuente"> ARTE DIGITAL</p></a></p>
-        <p><a class="text-2-2 fuente" href="/turismo">COACHING
-            <p class="fuente"> TURISMO</p>
-            <p class="fuente"> VIRTUAL</p></a></p>
-        <p><a href="/coaching"class="text-2-3 fuente">COACHING
-            <p class="fuente"> PROYECTOS</p>
-           <p class="fuente"> DIGITALES</p></a></p>
+        <p><a href=""class="text-2">{{"BEGINNING.TITLE-5" | translate}}</a></p>
+        <p><a class="text-2-1 fuente" href="/arte">{{"BEGINNING.COACHING" | translate}}
+            <p class="fuente">{{"BEGINNING.TITLE-6" | translate}}</p></a></p>
+        <p><a class="text-2-2 fuente" href="/turismo">{{"BEGINNING.COACHING" | translate}}
+            <p class="fuente"> {{"BEGINNING.COACHING-1.1" | translate}}</p>
+            <p class="fuente"> {{"BEGINNING.COACHING-1.2" | translate}}</p></a></p>
+        <p><a href="/coaching"class="text-2-3 fuente">{{"BEGINNING.COACHING" | translate}}
+            <p class="fuente"> {{"BEGINNING.COACHING-2.1" | translate}}</p>
+           <p class="fuente"> {{"BEGINNING.COACHING-2.2" | translate}}</p></a></p>
     </picture>
 
     <picture>
         <img class="img-3" src="../../assets/img/principal/3.png" alt="">
-        <p><a href="#" class="text-3">CONSULTORÍA DE ESTRATEGIA DIGITAL</a></p>
-        <p><a href="/produccion"class="text-3-1 fuente">PRODUCCIÓN
-           <p class="fuente"> DIGITAL</p></a></p>
-        <p><a href="/marketing"class="text-3-2 fuente">MARKETING
-           <p class="fuente"> EXPONENCIAL</p></a></p>
+        <p><a href="#" class="text-3">{{"BEGINNING.TITLE-7" | translate}}</a></p>
+        <p><a href="/produccion"class="text-3-1 fuente">{{"BEGINNING.TITLE-8" | translate}}
+           <p class="fuente"> {{"BEGINNING.TITLE-8.1" | translate}}</p></a></p>
+        <p><a href="/marketing"class="text-3-2 fuente">{{"BEGINNING.TITLE-9" | translate}}
+           <p class="fuente"> {{"BEGINNING.TITLE-9.1" | translate}}</p></a></p>
     </picture>
 
     <picture>
         <img class="img-4" src="../../assets/img/principal/4.png" alt="">
-        <p><a href=""class="text-4">DESARROLLO DE SOLUCIONES <p class="text-4-1"> BLOCKCHAIN</p></a></p>
-        <p><a class="text-4-2 fuente" href="/dapps">DAPPs</a></p>
+        <p><a href=""class="text-4"> {{"BEGINNING.TITLE-10" | translate}} <p class="text-4-1">  {{"BEGINNING.TITLE-10.1" | translate}}</p></a></p>
+        <p><a class="text-4-2 fuente" href="/dapps">{{"BEGINNING.TITLE-11" | translate}}</a></p>
     </picture>
 
     <picture>
         <img class="img-5" src="../../assets/img/principal/5.png" alt="">
-        <p><a href=""class="text-5-1">HEAD HUNTING DEVELOPERS
-            <p> NUEVA ZELANDA</p></a></p>
+        <p><a href=""class="text-5-1">{{"BEGINNING.TITLE-12" | translate}}
+            <p>{{"BEGINNING.TITLE-12.1" | translate}}</p></a></p>
     </picture>
 </div>
