--- a/src/app/Components/nav/nav.component.html
+++ b/src/app/Components/nav/nav.component.html
@@ -9,7 +9,7 @@
       <img class="nav__item-3" src="../../assets/img/img/aliados.png"  alt="" srcset="">
       <p><a class="nav__aliados text" routerLink="/aliados" >{{"NAV.TITLE-3" | translate}}</a></p>
       <img class="nav__item-4" src="../../assets/img/img/oficina-virtual.png" alt="" srcset="">
-      <p><a class="nav__virtual text" routerLink="" >{{"NAV.TITLE-4" | translate}}</a></p>
+      <p><a class="nav__virtual text" href="https://gather.town/app/zmougmiMJ2HHVYbZ/ketanolab" >{{"NAV.TITLE-4" | translate}}</a></p>
       <img class="nav__logo" src="../../assets/img/img/circulo-01.svg">
       <p><a class="nav__home" routerLink="" >{{"NAV.TITLE-5" | translate}}</a></p>
   </div>
