--- a/src/app/Components/nosotros/nosotros.component.css
+++ b/src/app/Components/nosotros/nosotros.component.css
@@ -5,10 +5,13 @@
   width: 300px;
   height: 300px;
 }
-/* .row{
-    margin-left: 150px;
-} */
+
 .card1{
+    margin-left: 15px;
+    width: 20rem;
+}
+.card2{
+    margin-top: -75px;
     margin-left: 15px;
     width: 20rem;
 }
@@ -23,7 +26,7 @@
 .cuadro2{
     width: 200px;
     height:65px ;  
-    margin-top: -50px;
+    margin-top: -35px;
     margin-left: 20px; 
 }
 .cuadro3{
@@ -42,6 +45,19 @@
 .text3{
     margin-top: -45px;
     margin-left: 60px;
+}
+.imgIzq{
+width: 75px;
+margin-left: 450px;
+margin-top: -65px;
+}
+.imgDer{
+width: 75px;
+margin-left: 950px;
+margin-top: -100px;
+}
+.text{
+    margin-top: -60px;
 }
 .color1{
     background-color: #00172A;
