--- a/src/app/Components/nosotros/nosotros.component.html
+++ b/src/app/Components/nosotros/nosotros.component.html
@@ -12,7 +12,7 @@
             <h3 class="text-center pb-5 pt-6 h1">{{"WE.TITLE" | translate}}</h3>
         </div>
         <div class="row hola " >
-            <div class="card1">
+            <div class="card2">
               <div class="card-body">
                 <img src="../../../assets/img/roger.svg" class="img1"  alt="">
                 <img src="../../../assets/img/Recurso.svg" class="cuadro1"  alt="">
@@ -26,15 +26,29 @@
                     <p class="text2">{{"WE.PERSON-2" | translate}}</p>
                 </div>
               </div>
-              <div  class="card1" >
+              <div  class="card2" >
                 <div class="card-body" >
                     <img src="../../../assets/img/mile.svg" class="img1" alt="">
                     <img src="../../../assets/img/Recurso.svg" class="cuadro3"  alt="">
                     <p class="text3">{{"WE.PERSON-3" | translate}}</p>
                 </div>
               </div>
+              
             </div>
-          <div class="container-md col-md-9 p-8">
+            <div class="row">
+              <div>
+                <div class="card-body" >
+                    <img src="../../../assets/img/flechaIzq.svg" class="imgIzq" alt="">
+                </div>
+              </div>
+              <div>
+                <div class="card-body" >
+                    <img src="../../../assets/img/flechaDer.svg" class="imgDer" alt="">
+               </div>
+              </div>
+            </div>
+
+          <div class="container-md col-md-9 p-8 text">
             <p class="text-justify pb-8 pt-8">{{"WE.PARAGRAPH" | translate}}</p>
         </div>
     </div>
