--- a/src/app/Components/experiencia/experiencia.component.html
+++ b/src/app/Components/experiencia/experiencia.component.html
@@ -7,9 +7,10 @@
 </head>
 <body class="color1">
     <app-nav></app-nav>
+    <app-navbar class="navres"></app-navbar>
     <div class="container">
       <div class="container-md p-6">
-          <h3 class="text-center pb-5 pt-6 h1">{{"EXPERIENCE.TITLE" | translate}}</h3>
+          <h3 class="text-center pb-5 pt-6 h1 fuente">{{"EXPERIENCE.TITLE" | translate}}</h3>
       </div>
       <div class="row hola" >
           <div class="card1">
@@ -55,8 +56,8 @@
               </div>
             </div>
           </div>
-        <div class="container-md col-md-9 p-8">
-          <p class="text-justify pb-8 pt-8 text1">{{"EXPERIENCE.PARAGRAPH" | translate}}</p>
+        <div class="container-md col-md-10 p-8">
+          <p class="text-justify pb-8 pt-8 h5 text1">{{"EXPERIENCE.PARAGRAPH" | translate}}</p>
       </div>
   </div>
 </body>
