--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -4,7 +4,7 @@
   </picture>
 
   <picture>
-    <img class="home__text" src="../../assets/img/Home/Ketanolab.svg" />
+    <img class="home__text" src="../../assets/img/keta.png" />
   </picture>
 
   <picture>
