--- a/src/app/Components/marketing/marketing.component.html
+++ b/src/app/Components/marketing/marketing.component.html
@@ -12,11 +12,11 @@
         <div class="row justify-content-center">
             <div class="col-auto posicion">
                 <div class="figura">
-                    <p class="pt-6">{{"MARKETING.TITLE" | translate}}</p>
+                    <p class="pt-6 fuente">{{"MARKETING.TITLE" | translate}}</p>
                 </div>
-              <img src="../../../assets/img/mark.jpg" class="img1" alt="">
+              <img src="../../../assets/img/markExp.svg" class="img1" alt="">
             </div>
-            <div class="col col-md-3 ml-1 color">
+            <div class="col col-md-3 ml-2 color">
                 <p class="  pt-4 h6">{{"MARKETING.PARAGRAPH" | translate}}</p>
                 <p class=" pb-4 pt-6 h6">{{"MARKETING.PARAGRAPH-1" | translate}}</p>
                 <ul class=" pb-4 h6">
