--- a/src/app/Components/nosotros/nosotros.component.html
+++ b/src/app/Components/nosotros/nosotros.component.html
@@ -7,9 +7,10 @@
 </head>
 <body class="color1">
     <app-nav></app-nav>
+    <app-navbar class="navres"></app-navbar>
     <div class="container">
         <div class="container-md p-6">
-            <h3 class="text-center pb-5 pt-6 h1">{{"WE.TITLE" | translate}}</h3>
+            <h3 class="text-center pb-5 pt-6 h1 fuente">{{"WE.TITLE" | translate}}</h3>
         </div>
         <div class="row hola " >
             <div class="card2">
