--- a/src/app/Components/produccion/produccion.component.html
+++ b/src/app/Components/produccion/produccion.component.html
@@ -11,18 +11,18 @@
         <div class="row justify-content-center">
             <div class="col-auto posicion">
                 <div class="figura">
-                    <p class="pt-6 ml-6">{{"PRODUCTION.TITLE" | translate}}</p>
+                    <p class="pt-6 ml-6 fuente">{{"PRODUCTION.TITLE" | translate}}</p>
                 </div>
               <img src="../../../assets/img/mark.jpg" class="img1" alt="">
             </div>
-            <div class="col col-md-3 ml-1 color">
-                <p class=" pb-6 pt-6 h6">{{"PRODUCTION.PARAGRAPH" | translate}}</p>
+            <div class="col col-md-3 ml-2 color">
+                <img src="../../../assets/img/marcoInter.png" class="img2" alt="">
+                <p class=" pb-6 pt-6 h6 text">{{"PRODUCTION.PARAGRAPH" | translate}}</p>
             </div>
+            
           </div>
     </div>
-
-    
-    
+    <br><br><br><br><br><br><br>
 </body>
 </html>
 
