--- a/src/app/Components/nav/nav.component.html
+++ b/src/app/Components/nav/nav.component.html
@@ -1,5 +1,13 @@
-<body class="color1">
-    <div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+  <body class="color1">
+    <div class="hola1">
       <p class="text1">{{"NAV.TITLE" | translate}}</p>
       <img class="nav__barra" src="../../assets/img/Inicio/bara.svg" alt="">
       <img class="nav__item-1" routerLink="/nosotros" src="../../assets/img/img/nosotros.png" alt="" srcset="">
@@ -11,5 +19,8 @@
       <img class="nav__item-4" src="../../assets/img/img/oficina-virtual.png" alt="" srcset="">
       <p><a class="nav__virtual text" href="https://gather.town/app/zmougmiMJ2HHVYbZ/ketanolab" >{{"NAV.TITLE-4" | translate}}</a></p>
       <img class="nav__logo" src="../../assets/img/img/circulo-01.svg">
-      <p><a class="nav__home" routerLink="" >{{"NAV.TITLE-5" | translate}}</a></p>
+      <p><a class="nav__home text" routerLink="" >{{"NAV.TITLE-5" | translate}}</a></p>
   </div>
+</body>
+</html>
+
