--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -1,22 +1,29 @@
-<body class="color">
-<nav class="nav">
-    <section>
-        <picture>
-            <img class="nav__logo" src="../../assets/img/img/circulo-01.svg">
-            <!-- <img class="nav__barra" src="../../assets/img/Inicio/bara.svg" alt=""> -->
-            <a class="nav__home" routerLink="/home">HOME</a>
-        </picture>
-
-        <picture class="nav__item">
-            <img class="nav__item-1" routerLink="/nosotros" src="../../assets/img/img/nosotros.png" alt="" srcset="">
-            <p><a class="nav__nosotros text" routerLink="/nosotros" >NOSOTROS</a></p>
-            <img class="nav__item-2" src="../../assets/img/img/nuestra-experiencia.png" alt="" srcset="">
-            <p><a class="nav__experiencia text" routerLink="/experiencia" >NUESTRA EXPERIENCIA</a></p>
-            <img class="nav__item-3" src="../../assets/img/img/aliados.png"  alt="" srcset="">
-            <p><a class="nav__aliados text" routerLink="/aliados" >ALIADOS</a></p>
-            <img class="nav__item-4" src="../../assets/img/img/oficina-virtual.png" alt="" srcset="">
-            <p><a class="nav__virtual text" routerLink="" >OFICINA VIRTUAL</a></p>
-        </picture>
-    </section>
-</nav>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nav</title>
+</head>
+<body>
+    <nav class="navbar navbar-expand-sm navbar-dark hola" >
+        <div class="container-fluid ">
+          <a class="navbar-brand" href="">
+              <img src="../../../assets/img/img/circulo-01.svg" alt="">
+          </a> 
+            <button class="navbar-toggler button-nav" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+               <span class="navbar-toggler-icon"></span>
+           </button>
+           <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+               <ul class="navbar-nav ">
+                   <li class="nav-item"><a class="nav-link active" href="/home">{{"NAV.TITLE-1" | translate}}</a></li>
+                   <li class="nav-item"><a class="nav-link" href="/services">{{"NAV.TITLE-2" | translate}}</a></li>
+                   <li class="nav-item"><a class="nav-link" href="/we">{{"NAV.TITLE-3" | translate}}</a></li>
+                   <li class="nav-item"><a class="nav-link" href="/pricing">{{"NAV.TITLE-4" | translate}}</a></li>
+               </ul>
+           </div>
+        </div>
+    </nav>
 </body>
+</html>
