--- a/src/app/Components/prueba/prueba.component.css
+++ b/src/app/Components/prueba/prueba.component.css
@@ -1,119 +1,83 @@
-.bannerStyle h1 {
-    min-height: 218px;
-    line-height: 218px;
-    text-align: center;
-    
-  }
-  .leftRs {
-    position: absolute;
-    margin: auto;
-    top: 0;
-    bottom: 0;
-    width: 50px;
-    height: 50px;
-    box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.568);
-    border-radius: 999px;
-    left: 0;
-    z-index: 1;
-    margin-top: 100px;
-    display: none;
-  }
-  
-  .rightRs {
-    position: absolute;
-    margin: auto;
-    top: 0;
-    bottom: 0;
-    width: 50px;
-    height: 50px;
-    box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.568);
-    border-radius: 999px;
-    right: 0;
-    z-index: 1;
-    display: none;
-  }
-  .container{
-    margin-top: 9%;
- }
-.img1{
-  width: 325px;
-} 
-
-.card1{
-    margin-left: 15px;
-    width: 25rem;
-}
-.hola{
-    justify-content: center;
-   
-}
-.color1{
-    background-color: #00172A;
-    color: white;
-}
-.nav__logo{
-  position: absolute;
-  margin-left: 350px;
+/* .boton1{
   margin-top: 10px;
-  width: 150px;
-  height: 200px;
 }
-.nav__home{
-  font-family: 'Orbitron', sans-serif;
-  color: #00ffff;
-  position: absolute;
-  margin-top: 135px;
-  margin-left: 395px;
+.button{
+  color: white;
+  float: left;
+  line-height: 25px;
+  background-color: #279abd;
+  border: 2px solid #279abd;
+  padding: 8px 10px 3px 50px;
+  text-align: center;
+
 
 }
-.nav__item-1{
-  position: absolute;
-  margin-left: 570px;
-  margin-top: 95px;
+.arrow{
+  display: block;
+  float: left;
+  width: 0;
+  height: 0;
+  border: 20px solid transparent;
+  border-right-color: #279abd;
 }
-.nav__nosotros{
-  position: absolute;
-  margin-left: 640px;
-  margin-top: 110px;
+.arrow1{
+  display: block;
+  float: left;
+  width: 0;
+  height: 0;
+  border: 20px solid transparent;
+  border-left-color: #279abd;
 }
-.nav__barra{
+.line1 {
+  width: 43px;
+  height: 50px;
+  border-bottom: 4px solid #00172A;
+  -webkit-transform:
+      translateY(15px)
+      translateX(10px)
+      rotate(-70deg);
   position: absolute;
-  margin-top: 4.5%;
+  top: -18px;
+  left: 0px;
+}
+.line2 {
+  width: 43px;
+  height: 50px;
+  border-bottom: 4px solid #00172A;
+  -webkit-transform:
+      translateY(15px)
+      translateX(10px)
+      rotate(-70deg);
+  position: absolute;
+  top: -18px;
+  left: 8px;
+}
+.line3 {
+  width: 43px;
+  height: 50px;
+  border-bottom: 4px solid #00172A;
+  -webkit-transform:
+      translateY(15px)
+      translateX(10px)
+      rotate(-70deg);
+  position: absolute;
+  top: -18px;
+  left: 16px;
+} */
+.hola{
+  visibility: hidden;
+}
+img{
+  width: 3rem;
 }
 
-.nav__item-2{
-  position: absolute;
-  margin-left: 760px;
-  margin-top: 95px;
-}
-.nav__experiencia{
-  position: absolute;
-  margin-left: 840px;
-  margin-top: 110px;
-}
-
-.nav__item-3{
-  position: absolute;
-  margin-left: 1060px;
-  margin-top: 95px;
-}
-.nav__aliados{
-  position: absolute;
-  margin-left: 1130px;
-  margin-top: 110px;
-}
-
-.nav__item-4{
-  position: absolute;
-  margin-left: 1250px;
-  margin-top: 95px;
-}
-.nav__virtual{
-  position: absolute;
-  margin-left: 1330px;
-  margin-top: 110px;
-}
-.text1{
-  color: #000; /* Fallback for older browsers */
-  color: rgba(0, 0, 0, 0.5);
+/* .button-nav{
+  background-color: yellowgreen;
+  border: none;
+} */
+@media only screen and (max-width: 600px) {
+  .hola {
+    visibility: initial;
+    background-color: #00172A;
+  }
 }
