--- a/src/app/Components/prueba/prueba.component.html
+++ b/src/app/Components/prueba/prueba.component.html
@@ -1,69 +1,42 @@
-<body class="color1">
-  <div>
-    <p class="text1">Nav Bar</p>
-    <img class="nav__barra" src="../../assets/img/Inicio/bara.svg" alt="">
-    <img class="nav__item-1" routerLink="/nosotros" src="../../assets/img/img/nosotros.png" alt="" srcset="">
-    <p><a class="nav__nosotros text" routerLink="/nosotros" >NOSOTROS</a></p>
-    <img class="nav__item-2" src="../../assets/img/img/nuestra-experiencia.png" alt="" srcset="">
-    <p><a class="nav__experiencia text" routerLink="/experiencia" >NUESTRA EXPERIENCIA</a></p>
-    <img class="nav__item-3" src="../../assets/img/img/aliados.png"  alt="" srcset="">
-    <p><a class="nav__aliados text" routerLink="/aliados" >ALIADOS</a></p>
-    <img class="nav__item-4" src="../../assets/img/img/oficina-virtual.png" alt="" srcset="">
-    <p><a class="nav__virtual text" routerLink="" >OFICINA VIRTUAL</a></p>
-    <img class="nav__logo" src="../../assets/img/img/circulo-01.svg">
-    <p><a class="nav__home" routerLink="" >HOME</a></p>
-</div>
-
-<div class="container">
-    <div class="container-md p-6">
-        <h3 class="text-center pb-5 pt-6 h1">NUESTRA EXPERIENCIA</h3>
-    </div>
-    <div class="row hola" >
-        <div class="card1">
-          <div class="card-body">
-            <ngu-carousel [inputs]="carouselBanner" [dataSource]="carouselTileItems$ | async">
-                <button NguCarouselPrev class='leftRs'>&lt;</button>
-
-                <ngu-item *nguCarouselDef="let item; index as i; let ani = animate" [@slider]="ani">
-                  <div class="bannerStyle" [style.background]="'url(' + item + ')'">
-                    <h1>{{ i + 1 }}</h1>
-                  </div>
-                </ngu-item>
-                <button NguCarouselNext class='rightRs'>&gt;</button>
-              </ngu-carousel>
-            </div>
-          </div>
-          <div class="card1">
-            <div class="card-body" >
-                <ngu-carousel [inputs]="carouselBanner" [dataSource]="carouselTileItems1$ | async">
-                    <button NguCarouselPrev class='leftRs'>&lt;</button>
-
-                    <ngu-item *nguCarouselDef="let item; index as i; let ani = animate" [@slider]="ani">
-                      <div class="bannerStyle" [style.background]="'url(' + item + ')'">
-                        <h1>{{ i + 1 }}</h1>
-                      </div>
-                    </ngu-item>
-                    <button NguCarouselNext class='rightRs'>&gt;</button>
-                  </ngu-carousel>
-            </div>
-          </div>
-          <div  class="card1" >
-            <div class="card-body" >
-                <ngu-carousel [inputs]="carouselBanner" [dataSource]="carouselTileItems2$ | async">
-                    <button NguCarouselPrev class='leftRs'>&lt;</button>
-
-                    <ngu-item *nguCarouselDef="let item; index as i; let ani = animate" [@slider]="ani">
-                      <div class="bannerStyle" [style.background]="'url(' + item + ')'">
-                        <h1>{{ i + 1 }}</h1>
-                      </div>
-                    </ngu-item>
-                    <button NguCarouselNext class='rightRs'>&gt;</button>
-                  </ngu-carousel>
-            </div>
-          </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nav</title>
+</head>
+<body>
+    <app-nav></app-nav>
+    <nav class="navbar navbar-expand-sm navbar-dark hola" >
+        <div class="container-fluid ">
+          <a class="navbar-brand" href="">
+              <img src="../../../assets/img/img/circulo-01.svg" alt="">
+          </a> 
+            <button class="navbar-toggler button-nav" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+               <span class="navbar-toggler-icon"></span>
+           </button>
+           <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+               <ul class="navbar-nav ">
+                   <li class="nav-item"><a class="nav-link active" href="/home">{{"NAV.TITLE-1" | translate}}</a></li>
+                   <li class="nav-item"><a class="nav-link" href="/services">{{"NAV.TITLE-2" | translate}}</a></li>
+                   <li class="nav-item"><a class="nav-link" href="/we">{{"NAV.TITLE-3" | translate}}</a></li>
+                   <li class="nav-item"><a class="nav-link" href="/pricing">{{"NAV.TITLE-4" | translate}}</a></li>
+               </ul>
+           </div>
         </div>
-      <div class="container-md col-md-9 p-8">
-        <p class="text-justify pb-8 pt-8">KetanoLab es una Agencia de Servicios Digitales enfocada en aportar un valor diferencial, enlazando plataformas, mejorando la experiencia de consumo adaptándose a la transformación digital y brindando servicios que vayan  en tendencia a las nuevas  tecnologias siguiendo al ritmo de cada proyecto.</p>
-    </div>
-</div>
+    </nav>
 </body>
+</html>
+
+<!-- <div class="boton1">
+<span class="arrow"></span>
+<span class="line1"></span>
+<span class="line2"></span>
+<span class="line3"></span>
+<a href="" class="button">Nosotros</a>
+<span class="arrow1"></span>
+</div>
+<br><br> -->
+
+
