--- a/src/app/Components/turismo/turismo.component.html
+++ b/src/app/Components/turismo/turismo.component.html
@@ -11,11 +11,11 @@
         <div class="row justify-content-center">
             <div class="col-auto posicion">
                 <div class="figura">
-                    <p class="pt-6 ml-6">{{"SIGHTSEEING.TITLE" | translate}}</p>
+                    <p class="pt-6 ml-6 fuente">{{"SIGHTSEEING.TITLE" | translate}}</p>
                 </div>
-              <img src="../../../assets/img/mark.jpg" class="img1" alt="">
+              <img src="../../../assets/img/turismovirt.svg" class="img1" alt="">
             </div>
-            <div class="col col-md-3 ml-1 color">
+            <div class="col col-md-3 ml-2 color">
                 <p class=" pb-6 pt-6 h6">{{"SIGHTSEEING.PARAGRAPH" | translate}}</p>
             </div>
           </div>
