--- a/src/app/Components/comerce/comerce.component.html
+++ b/src/app/Components/comerce/comerce.component.html
@@ -7,6 +7,7 @@
 </head>
 <body class="color1">
     <app-nav></app-nav>
+    <app-navbar class="navres"></app-navbar>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-auto posicion">
@@ -16,13 +17,12 @@
               <img src="../../../assets/img/ecom.png" class="img1" alt="">
             </div>
             <div class="col col-md-3 ml-2 color">
+                <img src="../../../assets/img/marcoInter.png" class="img2" alt="">
                 <p class=" pb-6 pt-6 h6">{{"COMMERCE.PARAGRAPH" | translate}}</p>
             </div>
           </div>
     </div>
-
-    
-    
+    <br><br><br><br>
 </body>
 </html>
 
