--- a/src/app/Components/marketing/marketing.component.html
+++ b/src/app/Components/marketing/marketing.component.html
@@ -8,6 +8,7 @@
 </head>
 <body class="color1">
     <app-nav></app-nav>
+    <app-navbar class="navres"></app-navbar>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-auto posicion">
@@ -17,6 +18,7 @@
               <img src="../../../assets/img/markExp.svg" class="img1" alt="">
             </div>
             <div class="col col-md-3 ml-2 color">
+                <img src="../../../assets/img/marcoInter.png" class="img2" alt="">
                 <p class="  pt-4 h6">{{"MARKETING.PARAGRAPH" | translate}}</p>
                 <p class=" pb-4 pt-6 h6">{{"MARKETING.PARAGRAPH-1" | translate}}</p>
                 <ul class=" pb-4 h6">
@@ -29,6 +31,7 @@
             </div>
           </div>
     </div>
+    <br><br>
 </body>
 </html>
 
