--- a/src/app/Components/nosotros/nosotros.component.html
+++ b/src/app/Components/nosotros/nosotros.component.html
@@ -50,7 +50,7 @@
             </div>
 
           <div class="container-md col-md-9 p-8 text">
-            <p class="text-justify pb-8 pt-8">{{"WE.PARAGRAPH" | translate}}</p>
+            <p class="text-justify pb-8 pt-8 h5">{{"WE.PARAGRAPH" | translate}}</p>
         </div>
     </div>
 </body>
