--- a/src/app/Components/produccion/produccion.component.html
+++ b/src/app/Components/produccion/produccion.component.html
@@ -7,11 +7,13 @@
 </head>
 <body class="color1">
     <app-nav></app-nav>
+    <app-navbar class="navres"></app-navbar>
+
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-auto posicion">
                 <div class="figura">
-                    <p class="pt-6 ml-6 fuente">{{"PRODUCTION.TITLE" | translate}}</p>
+                    <p class="pt-6 ml-1 fuente">{{"PRODUCTION.TITLE" | translate}}</p>
                 </div>
               <img src="../../../assets/img/mark.jpg" class="img1" alt="">
             </div>
