--- a/src/app/Components/apps/apps.component.css
+++ b/src/app/Components/apps/apps.component.css
@@ -1,5 +1,5 @@
 .container{
-    margin-top: 13%;
+    margin-top: 10%;
     }
     .figura {
         width: 200px;
@@ -10,7 +10,7 @@
         
     }
     .img1{
-        box-shadow: 10px 10px 5px rgb(31, 28, 28);  
+        box-shadow: 15px 18px 5px rgba(0, 0, 0, 0.623);   
         border: 1px solid #004483ff;       
         background-image: linear-gradient(#007df1ff, #007df1ff),
                         linear-gradient(#007df1ff, #007df1ff),
@@ -20,6 +20,8 @@
         background-size: 10px 37%, 15% 10px, 10px 38%, 15% 10px, calc(100% - 1px) calc(100% - 1px);
         background-position: left bottom, left bottom, right top, right top, 1px 1px;
         padding: 2px;
+        outline: 2px solid #004483ff;
+        outline-offset: -5px;
 
      }
     .color{
@@ -28,8 +30,7 @@
         text-align: justify;
         margin-top: 12%;
         margin-right: 0%;
-        border: rgb(13, 207, 233) 3px dashed;
-        outline: 10px double rgb(31, 49, 83);
+        outline: 6px double rgb(48, 74, 124);
         outline-offset: 10px;
         
     }
@@ -40,4 +41,30 @@
     .fuente{
         font-family: 'Orbitron';
     }
+    .navres{
+        visibility: hidden;
+      }
+      @media only screen and (max-width: 600px) {
+        .navres {
+          visibility: initial;
+          background-color: #00172A;
+        }
+      } 
+    .img2{
+        position:absolute;
+        width: 370px;
+        height: 268px;
+        margin-top: 4px;
+        margin-left: -5px;
+            }
+            @media only screen and (max-width: 700px) {
+                .img2 {
+                    width: 550px;
+                    height: 190px;
+                }
+              }
+            
+              body{
+                cursor:url(/assets/img/cursor.png), auto;
+              }
     
