--- a/src/app/Components/apps/apps.component.html
+++ b/src/app/Components/apps/apps.component.html
@@ -7,22 +7,22 @@
 </head>
 <body class="color1">
     <app-nav></app-nav>
+    <app-navbar class="navres"></app-navbar>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-auto posicion">
                 <div class="figura">
-                    <p class="pt-6 ml-6 fuente">{{"APPS.TITLE" | translate}}</p>
+                    <p class="pt-6 ml-1 fuente">{{"APPS.TITLE" | translate}}</p>
                 </div>
               <img src="../../../assets/img/app.png" class="img1" alt="">
             </div>
             <div class="col col-md-3 ml-2 color">
+                <img src="../../../assets/img/marcoInter.png" class="img2" alt="">
                 <p class="pt-4 h6">{{"APPS.PARAGRAPH" | translate}}</p>
             </div>
           </div>
     </div>
-
-    
-    
+    <br><br><br><br><br><br>
 </body>
 </html>
 
