--- a/src/app/Components/coaching/coaching.component.css
+++ b/src/app/Components/coaching/coaching.component.css
@@ -1,8 +1,8 @@
 .container{
-    margin-top: 13%;
+    margin-top: 10%;
     }
     .figura {
-        width: 400px;
+        width: 430px;
         height: 50px;
         color: white;
         border-right: 60px solid transparent;
@@ -10,7 +10,7 @@
         
     }
     .img1{
-        box-shadow: 10px 10px 5px rgb(31, 28, 28);
+        box-shadow: 15px 18px 5px rgba(0, 0, 0, 0.623); 
         width: 600px;
         border: 1px solid #004483ff;       
         background-image: linear-gradient(#007df1ff, #007df1ff),
@@ -21,6 +21,8 @@
         background-size: 10px 37%, 15% 10px, 10px 38%, 15% 10px, calc(100% - 1px) calc(100% - 1px);
         background-position: left bottom, left bottom, right top, right top, 1px 1px;
         padding: 2px;
+        outline: 2px solid #004483ff;
+    outline-offset: -5px;
   
      }
     .color{
@@ -29,8 +31,7 @@
         text-align: justify;
         margin-top: 12%;
         margin-right: 0%;
-        border: rgb(13, 207, 233) 3px dashed;
-        outline: 10px double rgb(31, 49, 83);
+        outline: 6px double rgb(48, 74, 124);
         outline-offset: 10px;
         
     }
@@ -41,4 +42,29 @@
     .fuente{
         font-family: 'Orbitron';
     }
-    
+.navres{
+    visibility: hidden;
+  }
+  @media only screen and (max-width: 600px) {
+    .navres {
+      visibility: initial;
+      background-color: #00172A;
+    }
+  } 
+.img2{
+    position:absolute;
+    width: 370px;
+    height: 375px;
+    margin-top: 4px;
+    margin-left: -5px;
+        }
+        @media only screen and (max-width: 700px) {
+            .img2 {
+                width: 520px;
+                height: 280px;
+            }
+          }
+        
+          body{
+            cursor:url(/assets/img/cursor.png), auto;
+          }
