--- a/src/app/Components/inicio/inicio.component.css
+++ b/src/app/Components/inicio/inicio.component.css
@@ -76,8 +76,8 @@
     position: absolute;
     width: 350px;
     height: 200px;
-    top: 70%;
-    left: 27%;
+    top: 66%;
+    left: 20%;
     box-shadow: 13px 13px 13px 1px rgba(0, 0, 0);
     z-index: 1;
     border: 1px solid #004483ff;       
@@ -96,8 +96,8 @@
 .text-2 {
     color: white;
     position: absolute;
-    top: 85%;
-    left: 32%;
+    top: 83%;
+    left: 25%;
     z-index: 2;
     font-size: 13px;
 }
@@ -105,8 +105,8 @@
 .text-2-1 {
     color: white;
     position: absolute;
-    top: 83%;
-    left: 20%;
+    top: 82%;
+    left: 13%;
     background-color: #001e36;
     padding: 50px 20px 20px 20px;
     border: #002443ff 10px double;
@@ -117,8 +117,8 @@
     color: white;
     position: absolute;
     text-align: center;
-    top: 83%;
-    left: 44.5%;
+    top: 82%;
+    left: 37%;
     background-color: #001e36;
     padding: 40px 30px 15px 30px;
     border: #002443ff 10px double;
@@ -129,8 +129,8 @@
     color: white;
     position: absolute;
     text-align: center;
-    top: 60%;
-    left: 20%;
+    top: 55%;
+    left: 35%;
     background-color: #001e36;
     padding: 10px 30px 60px 30px;
     border: #002443ff 10px double;
@@ -200,7 +200,7 @@
     position: absolute;
     width: 350px;
     top: 40%;
-    left: 44%;
+    left: 46%;
     
     box-shadow: 13px 13px 13px 1px rgba(0, 0, 0);
     z-index: 1;
@@ -225,7 +225,7 @@
     color: white;
     position: absolute;
     top: 55%;
-    left: 47%;
+    left: 50%;
     z-index: 2;
     font-size: 13px;
 }
@@ -233,8 +233,8 @@
 .text-4-2 {
     color: white;
     position: absolute;
-    top: 34%;
-    left: 39%;
+    top: 33%;
+    left: 41%;
     background-color: #001e36;
     padding: 50px 55px 50px 30px;
     border: #002443ff 10px double;
@@ -253,8 +253,8 @@
 .img-5 {
     position: absolute;
     width: 300px;
-    top: 78%;
-    left:70%;
+    top: 76%;
+    left:66%;
     box-shadow: 13px 13px 13px 1px rgba(0, 0, 0);
     z-index: 1;
 
@@ -278,7 +278,7 @@
     color: white;
     position: absolute;
     top: 80%;
-    left: 72%;
+    left: 68%;
     text-align: center;
     font-size: 0.77rem;
     z-index: 2;
@@ -288,7 +288,7 @@
     position: absolute;
     text-align: center;
     top: 67%;
-    left: 84%;
+    left: 80%;
     background-color: #001e36;
     padding: 60px 25px 50px 25px;
     border: #002443ff 10px double;
@@ -315,3 +315,7 @@ font-style: italic;
   html{
     cursor:url(/assets/img/cursor.png), auto;
   }
+  a{
+    cursor:url(/assets/img/cursor.png), auto;
+  }
+
