--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -17,10 +17,10 @@
            </button>
            <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                <ul class="navbar-nav ">
-                   <li class="nav-item"><a class="nav-link active" href="/home">{{"NAV.TITLE-1" | translate}}</a></li>
-                   <li class="nav-item"><a class="nav-link" href="/services">{{"NAV.TITLE-2" | translate}}</a></li>
-                   <li class="nav-item"><a class="nav-link" href="/we">{{"NAV.TITLE-3" | translate}}</a></li>
-                   <li class="nav-item"><a class="nav-link" href="/pricing">{{"NAV.TITLE-4" | translate}}</a></li>
+                   <li class="nav-item"><a class="nav-link active" href="/nosotros">{{"NAV.TITLE-1" | translate}}</a></li>
+                   <li class="nav-item"><a class="nav-link" href="/experiencia">{{"NAV.TITLE-2" | translate}}</a></li>
+                   <li class="nav-item"><a class="nav-link" href="/aliados">{{"NAV.TITLE-3" | translate}}</a></li>
+                   <li class="nav-item"><a class="nav-link" href="https://gather.town/app/zmougmiMJ2HHVYbZ/ketanolab">{{"NAV.TITLE-4" | translate}}</a></li>
                </ul>
            </div>
         </div>
