fixed social ll links

--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -12,12 +12,11 @@
   </picture>
 
   <picture class="home__redes">
-    
-    <a href="https://www.facebook.com/" target="blank"><img class="home__redes-facebook" src="../../assets/img/Home/facebook.svg" /></a>
-    <a href="https://www.facebook.com/" target="blank"><img class="home__redes-in" src="../../assets/img/Home/in.svg" /></a>
-    <a href="https://www.facebook.com/" target="blank"><img class="home__redes-twiter" src="../../assets/img/Home/twiter.svg" /></a>
-    
-    
+
+    <a href="https://www.facebook.com/ketanolabsrl/" target="blank"><img class="home__redes-facebook" src="../../assets/img/Home/facebook.svg" /></a>
+    <a href="https://twitter.com/KetanoLab" target="blank"><img class="home__redes-in" src="../../assets/img/Home/in.svg" /></a>
+    <a href="https://www.linkedin.com/company/76603728/" target="blank"><img class="home__redes-twiter" src="../../assets/img/Home/twiter.svg" /></a>
+
   </picture>
 
   <div class="home__centrado">
