--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nav</title>
+    <title>KetanoLab Menu</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark hola" >
         <div class="container-fluid ">
           <a class="navbar-brand" href="">
-              <img src="../../../assets/img/img/circulo-01.svg" alt="">
-          </a> 
+              <img href="/" src="../../../assets/img/img/circulo-01.svg" alt="">
+          </a>
             <button class="navbar-toggler button-nav" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
                <span class="navbar-toggler-icon"></span>
            </button>
