--- a/src/app/Components/services/services.component.html
+++ b/src/app/Components/services/services.component.html
@@ -14,14 +14,14 @@
                 <div class="figura">
                     <p class="pt-6 ml-1 fuente">{{"SERVICES.TITLE" | translate}}</p>
                 </div>
-              <img src="../../../assets/img/serviciosWeb.svg" class="img1" alt="">
+              <img src="../../../assets/img/mark.jpg" class="img1" alt="">
             </div>
             <div class="col col-md-3 ml-2 color">
                 <img src="../../../assets/img/marcoInter.png" class="img2" alt="">
                 <p class=" pb-6 pt-6 h6">{{"SERVICES.PARAGRAPH" | translate}}</p>
             </div>
           </div>
-    </div>  
+    </div>
     <br><br><br><br><br><br><br>
 </body>
 </html>
